chore: we do a little cleaning